...
            label,
            currencyDropdown
        )
        let label = UILabel().make {
            $0.textColor = .init(hex: "#6C727A")
            $0.font = assetBuilder.font(face: .regular, size: 14)
            $0.text = "Sending from"
        }
        let currencyDropdown = CurrencyDropDownView()

        lazy var rightStackView = UIStackView.make(.horizontal)(
            amount
        )
...
            constraints += leftStackView.trailingAnchor.constraint(lessThanOrEqualTo: rightStackView.leadingAnchor)
        }

        func updateUi() {

            backgroundColor = props.kind == .sending ? .white : .clear
            label.text = props.kind == .sending ? "Sending from" : "Receiver gets"
            if let value = props.value {
                amount.amount.text = String(format: "%.2f", value)
            } else {
                amount.amount.text = "-"
            }
            if props.isValidInput {
...
